--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "add-one": "node src/scripts/addOneContact.js",
     "count": "node src/scripts/countContacts.js",
     "remove-last": "node src/scripts/removeLastContact.js",
-    "remove-all": "node src/scripts/removeAllContacts.js"
+    "remove-all": "node src/scripts/removeAllContacts.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
     "@eslint/js": "^9.12.0",
     "@faker-js/faker": "^9.0.0",
     "eslint": "^9.12.0",
-    "globals": "^15.1.0"
+    "globals": "^15.1.0",
+    "nodemon": "^3.1.7"
   }
 }
