--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "count": "node src/scripts/countContacts.js",
     "remove-last": "node src/scripts/removeLastContact.js",
     "remove-all": "node src/scripts/removeAllContacts.js",
-    "dev": "nodemon index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js",
+    "lint": "eslint src/**/*.js"
   },
   "keywords": [],
   "author": "",
